# llm-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.test_ollama  README.md  README_DISCORDBOT.md  README_OLLAMA.md  biome.json  config.py  docker-compose.yml  litellm_uuid.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  tsup.config.ts  vitest.config.mts  vitest.setup.ts
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: DEV_GUIDE.md
.github/actions/setup-ai/: action.yml
.github/actions/setup-node-deps/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-devcontainer.yml  build-test-ollama-server.yml  build.yml  test-and-lint.yml  workflow-build.yml  workflow-test-and-lint.yml
.husky/: pre-push
discord_bot/: bot.py
litellm/: README.md  config.yaml  pyproject.toml
llm_assistant/: demo_ollama.py
llm_assistant/discord_bot/: README.md  bot.py  discord_bot.py  qa.py
llm_assistant/discord_bot/ai/: qa.py
llm_assistant/litellm/: README.md  proxy_config.yaml  test_litellm_proxy.py
llm_assistant/ollama/: README.md  openai_chat.py  proxy_config.yaml  test_proxy_config.yaml
mocks/: server.ts
mocks/handlers/: pdf.ts
playgrounds/: ask-llm.ts  download.ts  litellm_proxy.py
scripts/: delete-global-commands.ts  delete-guild-commands.ts  deploy-guild-commands.ts
src/: commands.ts
src/autocompletes/: builder.ts
src/autocompletes/select-model/: autocomplete.test.ts  autocomplete.ts
src/discord/: client.ts  deploy.ts
src/discord_bot/: bot.py  llm.py  settings.py
src/discord_bot/utilities/: utils_messages.py
src/litellm/: README.md  proxy_config.yaml  proxy_config_for_testing.yaml
src/llm/: client.ts  utils.ts
src/slash-commands/: builder.ts
src/slash-commands/ask-llm/: command.test.ts  command.ts
src/slash-commands/review-resume/: .gitignore  command.test.ts  command.ts  downloader.test.ts  downloader.ts  reader.ts  utils.ts
src/utils/: date.ts  llm_response.py  load-env.ts  logger.ts  pdf.py
tests/: litellm_config.yaml  test_demo.py  test_discord_bot_llm.py  test_litellm_concurrency.py  test_llm.py
tests/setup/: docker-compose.yaml  litellm_config.yaml
