[tool.poetry]
name = "llm-assistant"
version = "0.1.0"
description = ""
authors = ["Duy Hung Tran <hung.dtrn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = {extras = ["proxy"], version = "^1.23.7"}
openai = "^1.11.1"
python-dotenv = "^1.0.1"
discord-py-interactions = "5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
